fix: alterando o notebook para considerar a url das bases de treino e de teste

--- a/mvp.ipynb
+++ b/mvp.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "max       994.00     28.00     42.00  1,046.00    585.60     27.00     36.00"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,9 +421,12 @@
     "\n",
     "#input de dados de treino e de teste\n",
     "\n",
-    "base_treino = pd.read_csv(\"data/LSTM-Multivariate_pollution.csv\")\n",
+    "base_treino_url = \"https://raw.githubusercontent.com/rafaelhasslocher/sample_project/refs/heads/main/data/LSTM-Multivariate_pollution.csv\"\n",
+    "base_teste_url = \"https://raw.githubusercontent.com/rafaelhasslocher/sample_project/refs/heads/main/data/pollution_test_data1.csv\"\n",
     "\n",
-    "base_teste = pd.read_csv(\"data/pollution_test_data1.csv\")\n",
+    "base_treino = pd.read_csv(base_treino_url)\n",
+    "\n",
+    "base_teste = pd.read_csv(base_teste_url)\n",
     "\n",
     "#definição das variáveis utilizadas para o ajuste do ARIMA\n",
     "\n",
