fix: correção dos steps da learning rate

--- a/mvp.ipynb
+++ b/mvp.ipynb
@@ -254,7 +254,7 @@
     "        )\n",
     "    )\n",
     "\n",
-    "    learning_rate = hp.Float(\"learning_rate\", min_value=1e-5, max_value=1e-2, step=1e-1)\n",
+    "    learning_rate = hp.Choice(\"learning_rate\", values=[1e-5, 1e-4, 1e-3, 1e-2])\n",
     "\n",
     "    model.add(Dense(y_treino.shape[1]))\n",
     "    model.compile(\n",
