ajuste: alteração de pequenos pontos no arquivo readme e inclusão de comentário para contemplar camada convolucional no MVP. revisão do texto geral do notebook.

--- a/mvp.ipynb
+++ b/mvp.ipynb
@@ -5,7 +5,6 @@
    "metadata": {},
    "source": [
     "# MVP: Data Science & Analytics - PUC-Rio\n",
-    "#### Autor: Rafael Hasslocher\n",
     "\n",
     "#### Descrição\n",
     "\n",
@@ -28,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,8 +236,18 @@
     "    plt.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
     "\n",
     "\n",
+    "#def construir_modelosLSTM(hp, X_treino, y_treino)\n",
     "def construir_modelos_LSTM(hp, y_treino):\n",
     "    model = Sequential()\n",
+    "\n",
+    "    # model.add(\n",
+    "    #     Conv1D(\n",
+    "    #         filters=hp.Int(\"filters\", min_value=32, max_value=128, step=32),\n",
+    "    #         kernel_size=hp.Int(\"kernel_size\", min_value=2, max_value=5, step=1),\n",
+    "    #         activation='relu',\n",
+    "    #         input_shape=(X_treino.shape[1], X_treino.shape[2])\n",
+    "    #     )\n",
+    "    # )\n",
     "    \n",
     "    model.add(\n",
     "        LSTM(\n",
@@ -648,7 +657,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bloco 2 - Plotagem dos gráficos da série em uma periodicidade menos granular, para melhor visualização."
+    "### Bloco 2 - Visualização da Série Temporal"
    ]
   },
   {
@@ -686,7 +695,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conforme pode ser verificado acima, a série parece ter um padrão bem estabelecido de variações periódicas ao longo dos anos tanto para a média quanto para o desvio-padrão."
+    "Para analisar o comportamento da base de treino de forma efetiva, consideramos o plot das médias e desvios-padrão diários. Conforme pode ser verificado acima, a série parece ter um padrão bem estabelecido de variações periódicas ao longo dos anos para ambas as métricas"
    ]
   },
   {
@@ -767,7 +776,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para o gráfico de autocorrelação parcial, os dois primeiros lags se destacam. Em complemento ao gráfico de autocorrelação, a análise indica um componente auto-regressivo de ordem 2."
+    "Para o gráfico de autocorrelação parcial, os dois primeiros lags se destacam. Em complemento ao gráfico de autocorrelação, a análise indica um componente auto-regressivo de ordem 2. No entanto, para maior assertividade na definição dos hiperparâmetros, aplicamos a função \"cross_validate_arimas\" para determinar os menores valores das estatísticas AIC, BIC e RMSE."
    ]
   },
   {
@@ -799,9 +808,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para identificar os modelos de melhor ajuste dos dados, utilizamos a função \"cross_validate_arimas\" para determinar os menores valores das estatísticas AIC, BIC e RMSE. Enquanto as duas primeiras confirmam a suspeita inicial de ordem 2 para o componente auto-regressivo, a última indica melhor ajuste para a ordem 1. \n",
+    "Conforme pode ser verificado acima, enquanto as duas primeiras confirmam a suspeita inicial de ordem 2 para o componente auto-regressivo, a última indica melhor ajuste para a ordem 1. \n",
     "\n",
-    "A função também traz a indicação de que há de ser considerado um componente de média móvel no modelo selecionado."
+    "A função também traz a indicação de que há de ser considerado um componente de média móvel no modelo selecionado.\n",
+    "\n",
+    "Para verificar a estacionariedade da série temporal, utilizamos o teste de Dickey-Fuller Aumentado (ADF)."
    ]
   },
   {
@@ -828,7 +839,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para verificar a estacionariedade da série temporal, utilizamos o teste de Dickey-Fuller Aumentado (ADF). Os valores obtidos indicam uma série estacionária. "
+    "Os valores obtidos indicam uma série estacionária. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Em conjunto com a análise das funções de autocorrelação e autocorrelação parcial, selecionamos o modelo ARIMA(2, 0, 2) para ajustar os dados. O bloco abaixo nos indica que não houve warnings na estimação dos parâmetros do modelo, o que poderia denunciar problemas de convergência."
    ]
   },
   {
@@ -858,7 +876,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Em conjunto com a análise das funções de autocorrelação e autocorrelação parcial, selecionamos o modelo ARIMA(2, 0, 2) para ajustar os dados. O bloco acima nos indica que não houve warnings na estimação dos parâmetros do modelo, o que poderia denunciar problemas de convergência."
+    "Com a seleção do modelo, passamos a estar interessados no comportamento dos valores estimados, inicialmente, para a base de treino. O bloco a seguir utiliza a função \"gera_graficos_predict\" para a geração dos valores das estimativas e visualização dos dados."
    ]
   },
   {
@@ -907,7 +925,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O gráfico acima indica o ajuste do modelo sobre a base de treino. Podemos verificar que o ajuste parece ter sido eficiente, o que pode ser confirmado na base de teste."
+    "Podemos verificar que o ajuste parece ter sido eficiente, o que pode ser confirmado na base de teste. Antes de plotá-los, no entanto, voltamos nossas atenções à aplicação do teste de Ljung-Box no modelo e verificar seu ajuste."
    ]
   },
   {
@@ -943,7 +961,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Com base na análise do teste de Ljung-Box, não há evidência de autocorrelação significativa para os resíduos até o lag 8, o que indica que o modelo está capturando de forma adequada a estrutura dos dados até esse ponto."
+    "Com base na análise do teste acima, não há evidência de autocorrelação significativa para os resíduos até o lag 8, o que indica que o modelo está capturando de forma adequada a estrutura dos dados até esse ponto."
    ]
   },
   {
