fix: alteração no texto do notebook

--- a/mvp.ipynb
+++ b/mvp.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "#### Descrição\n",
     "\n",
-    "Para esse MVP, utilizou-se uma base do Kaggle referente aos dados de poluição ao longo do tempo de um determinado conjunto de dados de treino (link: https://www.kaggle.com/datasets/rupakroy/lstm-datasets-multivariate-univariate). Com o\n",
+    "Para esse MVP, utilizou-se uma base do Kaggle referente aos dados de poluição ao longo do tempo de um determinado conjunto de dados (link: https://www.kaggle.com/datasets/rupakroy/lstm-datasets-multivariate-univariate).\n",
     "\n",
     "O objetivo principal é realizar o ajuste com a base de treino e confrontar os resultados com a base de teste a partir de duas abordagens:\n",
     "\n",
