inclusão de comentários no código

--- a/poluicao-model.ipynb
+++ b/poluicao-model.ipynb
@@ -143,7 +143,6 @@
     "\n",
     "\n",
     "class MetricasModelo(TypedDict):\n",
-    "    # pep8: nomes de variaveis são snake case (lower com underline separando)\n",
     "    AIC: float\n",
     "    BIC: float\n",
     "    RMSE: float\n",
@@ -159,7 +158,6 @@
     "    resultados_resumido = {}\n",
     "    params = {}\n",
     "\n",
-    "    # Considerar fazer isso fora da funcao e receber direto os params.\n",
     "    for p, d, q in product(p_values, d_values, q_values):\n",
     "        params[f\"ARIMA({p=}, {d=}, {q=})\"] = {\"p\": p, \"d\": d, \"q\": q}\n",
     "\n",
@@ -203,7 +201,7 @@
     "\n",
     "    grafico_yhat = sns.lineplot(x=time_series.index, y=time_series, label=\"Real\")\n",
     "    sns.lineplot(x=time_series.index, y=yhat, color=\"red\", label=\"Previsto\")\n",
-    "    grafico_yhat.set_title(f\"Gráfico para o modelo selecionado.\")\n",
+    "    grafico_yhat.set_title(\"Gráfico para o modelo selecionado.\")\n",
     "    grafico_yhat.set_xlabel(\"Eixo X\")\n",
     "    grafico_yhat.set_ylabel(\"Eixo Y\")\n",
     "\n",
@@ -215,7 +213,7 @@
     "\n",
     "    ljungbox = model.test_serial_correlation(method=\"ljungbox\")\n",
     "\n",
-    "    print(f\"\\nResultados do teste de Ljung-Box para o modelo selecionado:\\n\")\n",
+    "    print(\"\\nResultados do teste de Ljung-Box para o modelo selecionado:\\n\")\n",
     "\n",
     "    for lag in range(len(ljungbox[0][0])):\n",
     "        p_valor = ljungbox[0][1][lag]\n",
@@ -229,7 +227,7 @@
     "\n",
     "    model.plot_diagnostics(fig=tela_diagnostics, auto_ylims=True)\n",
     "\n",
-    "    tela_diagnostics.suptitle(f\"Gráficos de diagnóstico para o modelo selecionado\")\n",
+    "    tela_diagnostics.suptitle(\"Gráficos de diagnóstico para o modelo selecionado\")\n",
     "\n",
     "    plt.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
     "\n",
@@ -462,8 +460,6 @@
     "coluna_serie = \"pollution\"\n",
     "coluna_tempo = \"date\"\n",
     "\n",
-    "print(base_treino.head())\n",
-    "\n",
     "#definição da periodicidade da série. nesse caso, definimos a própria periodicidade do conjunto de treino (horária)\n",
     "\n",
     "frequencia_serie = \"h\"\n",
@@ -474,7 +470,8 @@
     "base_treino.set_index(coluna_tempo, inplace=True)\n",
     "base_treino = base_treino.asfreq(frequencia_serie)\n",
     "\n",
-    "#verificar as informações gerais dos dados\n",
+    "#verificar as informações gerais dos dados de treino\n",
+    "print(base_treino.head())\n",
     "base_treino.describe()"
    ]
   },
@@ -639,6 +636,8 @@
     }
    ],
    "source": [
+    "#verificar as informações gerais dos dados de teste\n",
+    "\n",
     "print(base_teste.head())\n",
     "\n",
     "base_teste.describe()"
@@ -678,6 +677,8 @@
     }
    ],
    "source": [
+    "#plots da série sumarizada por média e desvio-padrão diários\n",
+    "\n",
     "plot_summary_serie(base_treino, coluna_serie, coluna_tempo, periodicidade=\"d\", summary=np.mean)\n",
     "plot_summary_serie(base_treino, coluna_serie, coluna_tempo, periodicidade=\"d\", summary=np.std)"
    ]
@@ -706,6 +707,7 @@
     }
    ],
    "source": [
+    "#criação dos box-plots do conjunto de treino\n",
     "gera_boxplot(base_treino, coluna_serie, base_treino.index.year)"
    ]
   },
@@ -733,6 +735,7 @@
     }
    ],
    "source": [
+    "#geração do gráfico de autocorrelação\n",
     "gera_acf(base_treino[coluna_serie], lags=80)"
    ]
   },
@@ -760,6 +763,7 @@
     }
    ],
    "source": [
+    "#criação do gráfico de autocorrelação parcial\n",
     "gera_pacf(base_treino[coluna_serie], lags=20)"
    ]
   },
@@ -793,12 +797,15 @@
     }
    ],
    "source": [
+    "#definição dos valores iniciais a serem iterados no cross-validate do arima\n",
     "p_values = [1, 2, 3]\n",
     "q_values = [0, 1, 2, 3]\n",
     "d_values = [0]\n",
     "\n",
+    "#preparação dos dados para o cross-validate\n",
     "split = TimeSeriesSplit(n_splits=2)\n",
     "\n",
+    "#aplicação do cross-validate\n",
     "resultados_cv = cross_validate_arimas(p_values, d_values, q_values, base_treino[coluna_serie], split)\n"
    ]
   },
@@ -828,6 +835,7 @@
     }
    ],
    "source": [
+    "#avaliar o resultado do teste adf\n",
     "result = adfuller(base_treino[coluna_serie])\n",
     "print(\"Estatística ADF\", result[0])\n",
     "print(\"p-valor\", result[1])"
@@ -861,10 +869,12 @@
     }
    ],
    "source": [
+    "#seleção dos parâmetros do modelo ARIMA\n",
     "p = 2\n",
     "d = 0\n",
     "q = 2\n",
     "\n",
+    "#ajuste do modelo selecionado\n",
     "selecionado = ajustar_arima(base_treino[coluna_serie], p, d, q)\n",
     "\n",
     "print(selecionado.get(\"warnings\"))"
@@ -923,10 +933,12 @@
     }
    ],
    "source": [
+    "#gerar os resultados preditos para o conjunto de treino\n",
     "yhat_treino = selecionado[\"model\"].predict(\n",
     "        start=base_treino[coluna_serie].index[0], end=base_treino[coluna_serie].index[-1]\n",
     "    )\n",
     "\n",
+    "#criação do gráfico para melhor visualização\n",
     "gera_graficos_predict(base_treino[coluna_serie], yhat_treino)"
    ]
   },
@@ -963,6 +975,7 @@
     }
    ],
    "source": [
+    "#aplicação do teste de ljung-box\n",
     "gera_ljungbox(selecionado)"
    ]
   },
@@ -990,6 +1003,7 @@
     }
    ],
    "source": [
+    "#geração de gráficos de diagnóstico\n",
     "gera_diagnosticos(selecionado)"
    ]
   },
@@ -1039,10 +1053,12 @@
     }
    ],
    "source": [
+    "#gerar os resultados preditos para o conjunto de treino\n",
     "yhat_teste = selecionado[\"model\"].predict(\n",
     "        start=base_teste[coluna_serie].index[0], end=base_teste[coluna_serie].index[-1]\n",
     "    )\n",
     "\n",
+    "#criação do gráfico para melhor visualização\n",
     "gera_graficos_predict(base_teste[coluna_serie], yhat_teste)"
    ]
   },
@@ -1068,6 +1084,8 @@
    "source": [
     "base_treino_encoded = base_treino.copy()\n",
     "base_teste_encoded = base_teste.copy()\n",
+    "\n",
+    "#transformação da variável categórica\n",
     "\n",
     "mapping = {\"NE\": 0, \"SE\": 1, \"NW\": 2, \"cv\": 3}\n",
     "\n",
@@ -1148,6 +1166,7 @@
     "base_treino_encoded = base_treino_encoded[columns]\n",
     "base_teste_encoded = base_teste_encoded[columns]\n",
     "\n",
+    "#aplicação do Scaler\n",
     "base_treino_encoded[columns] = scaler.fit_transform(base_treino_encoded[columns])\n",
     "base_teste_encoded[columns] = scaler.transform(base_teste_encoded[columns])\n",
     "\n",
@@ -1155,9 +1174,11 @@
     "\n",
     "base_teste_encoded.head()\n",
     "\n",
+    "#transformação das bases em arrays\n",
     "base_treino_encoded = np.array(base_treino_encoded)\n",
     "base_teste_encoded = np.array(base_teste_encoded)\n",
     "\n",
+    "#criação dos arrays que serão passados ao modelo\n",
     "X_treino, y_treino = arrays_LSTM(n_past=11, df=base_treino_encoded, n_future=1)\n",
     "\n",
     "X_teste, y_teste = arrays_LSTM(n_past=11, df=base_teste_encoded, n_future=1)\n",
@@ -1206,10 +1227,12 @@
     }
    ],
    "source": [
-    "# Define callbacks for avoiding overfitting\n",
+    "#definindo o earlystopping para evitar overfitting\n",
     "early_stopping = EarlyStopping(\n",
     "    monitor=\"val_loss\", patience=20, restore_best_weights=True\n",
     ")\n",
+    "\n",
+    "#aplicando a busca dos melhores hiperparâmetros\n",
     "\n",
     "tuner = RandomSearch(\n",
     "    lambda hp: construir_modelos_LSTM(hp, y_treino),\n",
@@ -1465,6 +1488,7 @@
     "print(f\"Melhor número de unidades na segunda camada LSTM: {best_hps.get('units_2')}\")\n",
     "print(f\"Melhor learning rate: {best_hps.get('learning_rate')}\")\n",
     "\n",
+    "#construção do modelo de melhores hiperparâmetros\n",
     "model = construir_modelos_LSTM(best_hps, y_treino)\n",
     "history = model.fit(\n",
     "    X_treino,\n",
@@ -1476,6 +1500,7 @@
     "    shuffle=False,\n",
     ")\n",
     "\n",
+    "#salvar o modelo\n",
     "model.save(\"model.keras\")\n"
    ]
   },
@@ -1485,6 +1510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#carregar o modelo salvo\n",
     "best_model = load_model(\"model.keras\")"
    ]
   },
@@ -1537,6 +1563,7 @@
    ],
    "source": [
     "\n",
+    "#plot das perdas de treino e de validação\n",
     "plt.figure(figsize=(15, 6))\n",
     "plt.plot(history.history[\"loss\"], label=\"Training Loss\")\n",
     "plt.plot(history.history[\"val_loss\"], label=\"Validation Loss\")\n",
@@ -1546,12 +1573,14 @@
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
+    "#aplicação do modelo no conjunto de teste \n",
     "test_predictions = best_model.predict(X_teste).flatten()\n",
     "test_results = pd.DataFrame(\n",
     "    data={\"Train Predictions\": test_predictions, \"Actual\": y_teste.flatten()}\n",
     ")\n",
     "test_results.head()\n",
     "\n",
+    "#plot de resultados\n",
     "plt.plot(test_results[\"Train Predictions\"], label=\"Predicted Values\")\n",
     "plt.plot(test_results[\"Actual\"], label=\"True Values\")\n",
     "plt.legend()\n",
