inclusão da instalação do keras-tuner no colab

--- a/poluicao-model.ipynb
+++ b/poluicao-model.ipynb
@@ -47,6 +47,8 @@
       },
       "outputs": [],
       "source": [
+        "!pip install keras-tuner\n",
+        "\n",
         "import warnings\n",
         "from itertools import product\n",
         "from typing import TypedDict\n",
