inclusão de comentário no código

--- a/poluicao-model.ipynb
+++ b/poluicao-model.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/rafaelhasslocher/poluicao-model/blob/main/poluicao-model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -47,6 +47,8 @@
       },
       "outputs": [],
       "source": [
+        "#instalação do keras-tuner, necessário para a execução no notebook google colab. caso seja rodado localmente, comentar a linha abaixo.\n",
+        "\n",
         "!pip install keras-tuner\n",
         "\n",
         "import warnings\n",
@@ -1726,6 +1728,10 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": ".venv",
       "language": "python",
@@ -1742,10 +1748,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
     }
   },
   "nbformat": 4,
