separação do código de instalação do keras-tuner

--- a/poluicao-model.ipynb
+++ b/poluicao-model.ipynb
@@ -42,15 +42,22 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#instalação do keras-tuner, necessário para a execução no notebook google colab\n",
+        "\n",
+        "!pip install keras-tuner"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "LguCn3i2lowr"
       },
       "outputs": [],
       "source": [
-        "#instalação do keras-tuner, necessário para a execução no notebook google colab. caso seja rodado localmente, comentar a linha abaixo.\n",
-        "\n",
-        "!pip install keras-tuner\n",
-        "\n",
         "import warnings\n",
         "from itertools import product\n",
         "from typing import TypedDict\n",
