inclusão de comentários quanto ao tempo de execução do código

--- a/poluicao-model.ipynb
+++ b/poluicao-model.ipynb
@@ -861,6 +861,8 @@
         }
       ],
       "source": [
+        "#atenção: em testes realizados no notebook do google colab, o código abaixo teve um tempo de execução de aproximadamente 6 minutos\n",
+        "\n",
         "#definição dos valores iniciais a serem iterados no cross-validate do arima\n",
         "p_values = [1, 2, 3]\n",
         "q_values = [0, 1, 2, 3]\n",
@@ -1348,6 +1350,8 @@
         }
       ],
       "source": [
+        "#atenção: em testes realizados no notebook do google colab, o código abaixo teve um tempo de execução de aproximadamente 1 hora\n",
+        "\n",
         "#definindo o earlystopping para evitar overfitting\n",
         "early_stopping = EarlyStopping(\n",
         "    monitor=\"val_loss\", patience=20, restore_best_weights=True\n",
@@ -1605,6 +1609,8 @@
         }
       ],
       "source": [
+        "#atenção: em testes realizados no notebook do google colab, o código abaixo teve um tempo de execução de aproximadamente 30 minutos\n",
+        "\n",
         "# Obter os melhores hiperparâmetros\n",
         "best_hps = tuner.get_best_hyperparameters()[0]\n",
         "\n",
